# aquarium

./: CMakeLists.txt  README.md  Readme.md
include/: Camera.h  Fish.h  Model.h  Plant.h  Shader.h  Texture.h  Water.h
include/glad/: glad.h
resources/models/: coral.mtl  fish.mtl  plant.mtl  rock.mtl
resources/shaders/: fragment.glsl  sand_fragment.glsl  sand_vertex.glsl  water_fragment.glsl  water_vertex.glsl
src/: Camera.cpp  Fish.cpp  Model.cpp  Plant.cpp  Shader.cpp  Texture.cpp  Water.cpp  glad.c  main.cpp
